--- a/games/puzzle-cube/index.html
+++ b/games/puzzle-cube/index.html
@@ -428,7 +428,7 @@
         </div>
     </div>
 
-    <!-- https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> -->
     <script>
         /**
  * @license
